# image-color-transparency

./: .env.example  .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.kiro/specs/image-color-transparency/: design.md  requirements.md  spec.json  tasks.md
docs/: DEVELOPMENT_GUIDE.md  DIRECTORY_STRUCTURE.md
static/: index.html
static/css/: style.css
static/js/: app.js
tests/: test_app.py  test_erase.py  test_erase_api.py  test_error_handling.py  test_file_storage.py  test_image_display.py  test_transparency.py  test_transparency_api.py  test_upload.py
transpalentor/application/: validation.py
transpalentor/domain/: transparency.py
transpalentor/infrastructure/: file_storage.py  logging_config.py
transpalentor/presentation/: app.py  error_handlers.py  exceptions.py  models.py
